put video title on videos and timestamps for time_created and last_edited for notes and videos
