# backend/app/src/static/v1/swagger.json
@@ -39,11 +39,19 @@
         },
         "video_id": {
           "type": "string",
-          "example": "https://www.youtube.com/watch?v=gSdG3FsMBq4"
+          "example": "gSdG3FsMBq4"
         },
         "timestamp": {
           "type": "number",
           "example": 2.5
+        },
+        "time_created": {
+          "type": "integer",
+          "example": 1573010015
+        },
+        "last_edited": {
+          "type": "integer",
+          "example": 1573010015
         }
       }
     },
@@ -71,6 +79,14 @@
             "education",
             "comedy"
           ]
+        },
+        "time_created": {
+          "type": "integer",
+          "example": 1573010015
+        },
+        "last_edited": {
+          "type": "integer",
+          "example": 1573010015
         },
         "notes_ids": {
           "type": "array",
@@ -208,11 +224,14 @@
               "+user_id",
               "+video_id",
               "+timestamp",
-              "-note_id",
+              "+time_created",
+              "+last_edited -note_id",
               "-note",
               "-user_id",
               "-video_id",
-              "-timestamp"
+              "-timestamp",
+              "-time_created",
+              "-last_edited"
             ],
             "default": "+timestamp"
           },
@@ -239,6 +258,16 @@
           {
             "name": "note",
             "type": "string",
+            "in": "query"
+          },
+          {
+            "name": "time_created",
+            "type": "integer",
+            "in": "query"
+          },
+          {
+            "name": "last_edited",
+            "type": "integer",
             "in": "query"
           }
         ],
@@ -306,7 +335,11 @@
                 },
                 "video_id": {
                   "type": "string",
-                  "example": "https://www.youtube.com/watch?v=gSdG3FsMBq4"
+                  "example": "gSdG3FsMBq4"
+                },
+                "video_title": {
+                  "type": "string",
+                  "example": "How to code"
                 },
                 "timestamp": {
                   "type": "number",
@@ -530,7 +563,11 @@
               "+categories",
               "-categories",
               "+notes_count",
-              "-notes_count"
+              "-notes_count",
+              "+time_created",
+              "-time_created",
+              "+last_edited",
+              "-last_edited"
             ],
             "default": "+video_id"
           },
@@ -556,6 +593,16 @@
           },
           {
             "name": "notes_count",
+            "type": "integer",
+            "in": "query"
+          },
+          {
+            "name": "time_created",
+            "type": "integer",
+            "in": "query"
+          },
+          {
+            "name": "last_edited",
             "type": "integer",
             "in": "query"
           }
